# ultra-doc-intelligence

./: .env.example  .gitignore  README.md  RUN_STEPS.md  pyproject.toml
app/: config.py  document_parsers.py  main.py  pipeline.py  schemas.py
app/ui/: streamlit_app.py
tests/: test_submission_flow.py
